# proforma

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/proforma/: .gitignore  __about__.py  __init__.py  proforma.py  qbooks.py
